styles/01_misc: disable text size adjust, mainly to fix the effect on Safari

--- a/webroot/styles/01_misc.css
+++ b/webroot/styles/01_misc.css
@@ -13,6 +13,9 @@ body {
 
 	font-size: 16px;
 	line-height: 1.5;
+
+	-webkit-text-size-adjust: none;
+	text-size-adjust: none;
 }
 
 body:lang(ja),
